# DAB-Radio

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  create_windows_package.ps1  create_windows_package.sh  fx.bat  get_live_data.sh  install_ubuntu_packages.sh  vcpkg.json
examples/: CMakeLists.txt  README.md  apply_frequency_shift.cpp  basic_radio_app.cpp  basic_radio_app_no_demod.cpp  basic_radio_benchmark.cpp  basic_radio_scraper.cpp  basic_radio_scraper_no_demod.cpp  convert_viterbi.cpp  double_buffer.h  loop_file.cpp  ofdm_demod_cli.cpp  ofdm_demod_gui.cpp  radio_app.cpp  read_wav.cpp  rtl_sdr.cpp  simulate_transmitter.cpp
examples/app_helpers/: app_audio.h  app_common_gui.cpp  app_common_gui.h  app_io_buffers.h  app_iq_readers.h  app_logging.h  app_ofdm_blocks.h  app_radio_blocks.h  app_readers.h  app_viterbi_convert_block.h  app_wav_reader.h
examples/audio/: CMakeLists.txt  audio_pipeline.cpp  audio_pipeline.h  frame.h  portaudio_output.h  portaudio_sink.cpp  portaudio_sink.h  portaudio_utility.h  ring_buffer.h
examples/device/: CMakeLists.txt  device.cpp  device.h  device_list.cpp  device_list.h  device_selector.cpp  device_selector.h
examples/getopt/: CMakeLists.txt  getopt.c
examples/gui/: CMakeLists.txt  README.md  imgui_extensions.cpp  imgui_skeleton.cpp  imgui_skeleton.h
examples/gui/audio/: CMakeLists.txt  render_portaudio_controls.cpp  render_portaudio_controls.h
examples/gui/basic_radio/: CMakeLists.txt  README.md  basic_radio_view_controller.cpp  basic_radio_view_controller.h  formatters.cpp  formatters.h  render_basic_radio.cpp  render_basic_radio.h  render_common.cpp  render_common.h  texture.cpp  texture.h
examples/gui/device/: CMakeLists.txt  render_devices.cpp  render_devices.h
examples/gui/ofdm/: CMakeLists.txt  render_ofdm_demod.cpp  render_profiler.cpp  render_profiler.h
examples/gui/profiler/: CMakeLists.txt  render_profiler.cpp
src/basic_radio/: CMakeLists.txt  README.md  basic_audio_channel.cpp  basic_audio_channel.h  basic_audio_controls.cpp  basic_audio_controls.h  basic_audio_params.h  basic_dab_channel.cpp  basic_dab_channel.h  basic_dab_plus_channel.cpp  basic_dab_plus_channel.h  basic_data_packet_channel.cpp  basic_data_packet_channel.h  basic_database_manager.cpp  basic_database_manager.h  basic_fic_runner.cpp  basic_fic_runner.h  basic_msc_runner.h  basic_radio.cpp  basic_radio.h  basic_radio_dependencies.h  basic_radio_logging.h  basic_slideshow.cpp  basic_slideshow.h  basic_thread_pool.h  basic_threaded_channel.cpp  basic_threaded_channel.h
src/basic_scraper/: CMakeLists.txt  README.md  basic_scraper.cpp  basic_scraper.h  basic_scraper_logging.h
src/dab/: CMakeLists.txt  CRC.h  README.md  additive_scrambler.h  dab_database.h  dab_database_entities.h  dab_database_types.h  dab_database_updater.cpp  dab_database_updater.h  dab_logging.cpp  dab_logging.h  dab_misc_info.h  fic_decoder.cpp  fic_decoder.h  fic_processor.cpp  fic_processor.h  fig_processor.h  logging.h  modified_julian_date.h  puncture_codes.h  radio_fig_handler.cpp  radio_fig_handler.h  subchannel_protection_table.h  viterbi_decoder.cpp  viterbi_decoder.h
src/dab/algorithms/: additive_scrambler.h  crc.h  dab_viterbi_decoder.cpp  dab_viterbi_decoder.h  phil_karn_viterbi_decoder.cpp  phil_karn_viterbi_decoder.h  reed_solomon_decoder.cpp  reed_solomon_decoder.h  viterbi_decoder.cpp  viterbi_decoder.h
src/dab/algorithms/viterbi/: viterbi_branch_table.h  viterbi_decoder_config.h  (+1 more)
src/dab/audio/: aac_audio_decoder.cpp  aac_audio_decoder.h  aac_data_decoder.cpp  aac_data_decoder.h  aac_decoder.cpp  aac_decoder.h  aac_frame_processor.cpp  aac_frame_processor.h  mp2_audio_decoder.cpp  mp2_audio_decoder.h  win32_pcm_player.cpp
src/dab/constants/: charsets.cpp  charsets.h  dab_parameters.h  language_table.h  programme_type_table.h  puncture_codes.h  subchannel_protection_tables.h
src/dab/database/: dab_database.cpp  dab_database.h  dab_database_entities.h  dab_database_types.h  dab_database_updater.cpp  dab_database_updater.h
src/dab/fic/: fic_decoder.cpp  fic_decoder.h  fig_handler_interface.h  fig_processor.cpp  fig_processor.h
src/dab/mot/: MOT_assembler.cpp  MOT_assembler.h  MOT_entities.h  MOT_processor.cpp  MOT_processor.h  MOT_slideshow_processor.cpp  MOT_slideshow_processor.h
src/dab/msc/: cif_deinterleaver.cpp  cif_deinterleaver.h  msc_data_group_processor.cpp  msc_data_group_processor.h  msc_data_packet_processor.cpp  msc_data_packet_processor.h  msc_decoder.cpp  msc_decoder.h  msc_reed_solomon_data_packet_processor.cpp  msc_reed_solomon_data_packet_processor.h  msc_xpad_processor.cpp  msc_xpad_processor.h
src/dab/pad/: pad_MOT_processor.cpp  pad_MOT_processor.h  pad_data_group.cpp  pad_data_group.h  pad_data_length_indicator.cpp  pad_data_length_indicator.h  pad_dynamic_label.cpp  pad_dynamic_label.h  pad_dynamic_label_assembler.cpp  pad_dynamic_label_assembler.h  pad_processor.cpp  pad_processor.h
src/examples/: CMakeLists.txt  README.md  basic_radio_app.cpp  basic_radio_benchmark.cpp  basic_radio_scraper.cpp  basic_radio_scraper_no_demod.cpp  ofdm_demod_cli.cpp
src/examples/audio/: CMakeLists.txt  audio_mixer.cpp  audio_mixer.h  frame.h  portaudio_output.cpp  portaudio_utility.cpp  resampled_pcm_player.cpp  resampled_pcm_player.h  ring_buffer.h
src/examples/device/: CMakeLists.txt  device.h
src/examples/getopt/: CMakeLists.txt  getopt.h
src/examples/gui/: CMakeLists.txt
src/ofdm/: CMakeLists.txt  README.md  circular_buffer.h  dab_mapper_ref.cpp  dab_mapper_ref.h  dab_ofdm_params_ref.cpp  dab_ofdm_params_ref.h  dab_prs_ref.cpp  dab_prs_ref.h  ofdm_constants.h  ofdm_demodulator.cpp  ofdm_demodulator.h  ofdm_demodulator_threads.cpp  ofdm_demodulator_threads.h  ofdm_frame_buffer.h  ofdm_helpers.h  ofdm_modulator.cpp  ofdm_modulator.h  ofdm_params.h  ofdm_symbol_mapper.cpp  ofdm_symbol_mapper.h  profiler.h  quantized_oscillator.h  reconstruction_buffer.h
src/ofdm/dsp/: README.md  apply_pll.cpp  apply_pll.h  c32_mul.h  chebyshev_sine.h  complex_conj_mul_sum.cpp  complex_conj_mul_sum.h  dsp_config.h
(+254 files in other folders)
